<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OSS</string>
    <string name="username">Username</string>
    <string name="username_hint">Username</string>
    <string name="forgot_password">http://118.139.182.155/OSS/Account/ForgotPassword</string>
    <string name="password_hint">Password</string>
    <string name="date">Activity Detail</string>
    <string name="add_activity_error">There is some problem while performing this operation</string>
    <string name="text_with_url">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="sign_in">OSS</string>
    <string name="fb_post">FB Options</string>
    <string name="activity_log_date_hint">Date</string>
    <string name="activity_hint">Activity</string>
    <string name="activity_comment">Comment</string>
    <string name="action_settings">Settings</string>
    <string name="errorMessage">Invalid email or password</string>
    <string name="activity_type">Activity</string>
    <string name="create_activity">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_activity_list">ActivityList</string>
    <string name="hello_world">Hello world!</string>

    <color name="white">#ffffffff</color>
    <color name="red">#ff0000</color>
    <color name="black">#000000</color>

    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_addactivity">Add Activity</string>
    <string name="title_activity_offered_reward">OfferedRewardActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_user_reward">UserReward</string>

</resources>
