<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal"
    tools:context="com.ist.login.testloginapp.AddActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout  android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:background="@drawable/round_shape"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:text="@string/add_activity_error"  android:layout_width="fill_parent"
            android:id="@+id/errorMessage"
            android:textColor="@color/red"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"  />

        <!--<TextView android:text="@string/date"  android:layout_width="fill_parent"
            android:textSize="8pt"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_height="wrap_content" />-->
        <EditText
            android:layout_width="match_parent"
            android:focusable="false"
            android:id="@+id/date_picker"
            android:hint="@string/activity_log_date_hint"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:focusable="false"


            android:id="@+id/activity_picker"
            android:hint="@string/activity_hint"
            android:layout_height="wrap_content" />



        <Switch
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fb_post"
            style="?android:attr/listSeparatorTextViewStyle"
            android:id="@+id/fb_switch" />

        <LinearLayout
            android:orientation="vertical"
            android:background="#E5E4E2"
            android:layout_marginTop="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView

                android:id="@+id/ivImage"
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_camera"
                android:scaleType="centerCrop" />


            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:id="@+id/activity_comment"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:hint="@string/activity_comment"
                android:layout_height="wrap_content" />

            </LinearLayout>




    </LinearLayout>

    <Button
        android:id="@+id/create_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveActivity"
        android:text="@string/create_activity"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        />

    <Button
        android:id="@+id/cancel_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cancelActivity"
        android:text="@string/cancel"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_button"
        />

</LinearLayout>

</ScrollView>

