<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity" android:orientation="vertical">


    <FrameLayout
        android:id="@+id/linlaHeaderProgress"
        android:background="@color/red"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            android:gravity="center"
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/loginForm"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="fill_parent"
            android:src="@drawable/logo"
            android:gravity="center"
            android:layout_height="wrap_content" />
        </LinearLayout>

    <LinearLayout
        android:background="@drawable/round_shape"
        android:layout_width="match_parent"
        android:id="@+id/loginForm"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" android:orientation="vertical">

        <TextView
            android:id="@+id/errorMessage"
            android:textColor="@color/red"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"
            android:text="@string/errorMessage"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/username"
            android:inputType="textEmailAddress"
            android:hint="@string/username_hint"
            android:layout_width="fill_parent"
            android:padding="5dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/sign_in"

            />


            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:clickable="true"
                android:textColor="#00AFF0"
                android:autoLink="web"
                android:text="@string/text_with_url"
                android:id="@+id/forgot_password"
                android:onClick="openBrowser"
                android:layout_height="wrap_content" />

        </LinearLayout>

    <ProgressBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/ctrlActivityIndicator"
        android:visibility="invisible"
        android:indeterminateOnly="true"
        android:keepScreenOn="true"
        />
</RelativeLayout>
